--- a/notebooks/data_import.ipynb
+++ b/notebooks/data_import.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": null,
    "id": "cf8edd2a",
    "metadata": {},
    "outputs": [
@@ -200,24 +200,24 @@
     }
    ],
    "source": [
-    "data_all = pd.read_csv(\"/Users/blairjdaniel/fintech_fraud/data/data_all.csv\")\n",
-    "data_all.head()"
+    "# data_all = pd.read_csv(\"/Users/blairjdaniel/fintech_fraud/data/data_all.csv\")\n",
+    "# data_all.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": null,
    "id": "92352a1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert the \"date\" column from MM/DD/YYYY into YYYY-MM-DD format\n",
-    "data_all['date'] = pd.to_datetime(data_all['date'], format='%m/%d/%Y').dt.strftime('%Y-%m-%d')"
+    "# # Convert the \"date\" column from MM/DD/YYYY into YYYY-MM-DD format\n",
+    "# data_all['date'] = pd.to_datetime(data_all['date'], format='%m/%d/%Y').dt.strftime('%Y-%m-%d')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": null,
    "id": "dcbe6b12",
    "metadata": {},
    "outputs": [
@@ -231,20 +231,20 @@
     }
    ],
    "source": [
-    "# For every column except 'date', replace all commas.\n",
-    "for col in data_all.columns:\n",
-    "    if col != 'date':\n",
-    "        # Remove commas using str.replace if the column is of object type.\n",
-    "        # Then, attempt to convert the column to numeric if possible.\n",
-    "        if data_all[col].dtype == 'object':\n",
-    "            data_all[col] = data_all[col].str.replace(',', '', regex=False)\n",
-    "            # Attempt conversion to numeric; if it fails (returns NaN), the original values are retained.\n",
-    "            data_all[col] = pd.to_numeric(data_all[col], errors='ignore')"
+    "# # For every column except 'date', replace all commas.\n",
+    "# for col in data_all.columns:\n",
+    "#     if col != 'date':\n",
+    "#         # Remove commas using str.replace if the column is of object type.\n",
+    "#         # Then, attempt to convert the column to numeric if possible.\n",
+    "#         if data_all[col].dtype == 'object':\n",
+    "#             data_all[col] = data_all[col].str.replace(',', '', regex=False)\n",
+    "#             # Attempt conversion to numeric; if it fails (returns NaN), the original values are retained.\n",
+    "#             data_all[col] = pd.to_numeric(data_all[col], errors='ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": null,
    "id": "86da118d",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
     }
    ],
    "source": [
-    "data_all.head()"
+    "# data_all.head()"
    ]
   },
   {
@@ -2311,12 +2311,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 415,
    "id": "a9eb40df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaled_df = scaled_df.iloc[:-1]"
+    "scaled_df = scaled_df.iloc[:-1]\n",
+    "scaled_df.to_csv('/Users/blairjdaniel/fintech_fraud/data/finals/scaled_df.csv')"
    ]
   },
   {
@@ -2630,7 +2631,10 @@
    "id": "bec9ed94",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
